--- a/README.mdx
+++ b/README.mdx
@@ -2,7 +2,7 @@
 
 - a manning 4 part liveproject beginning with [build an auth server](https://www.manning.com/liveproject/build-an-authorization-server)
 - here is my current understanding of how oauth works
-  ![JS Streams Observable](./media/middleware-oauth.png)
+  ![JS Streams Observable](./media/oauth.png)
 
 - building out the first part of the auth server with the following endpoints and reading about how it is based on events got me to thiking perhaps it would make sense to get deeper into this area with some more background before i proceed
 
