--- a/README.mdx
+++ b/README.mdx
@@ -13,3 +13,10 @@
 
 - [erick wendell mastering node streams](https://hotmart.com/en/club/masteringnodejsstreams/products/2105756/content/2OM01a8x76)
 - i jumped to this course and am bundling it with auth because i feel it may provide some good background material on events processing
+
+---
+
+```bash
+node --inspect authorizationServer.js
+chrome://inspect
+```
