--- a/README.mdx
+++ b/README.mdx
@@ -329,3 +329,16 @@ async function fetchResource() {
 }
 fetchResource();
 ```
+
+### Oauth Flow Summary
+
+1. GET client.authorize
+2. redirect server.authorize
+3. render server.approve
+4. POST server.approve
+5. redirect client.callback
+6. POST server.token
+7. GET api.resource
+
+- in steps 1-5, client sends resource owner to server to authorize and get a token
+- in steps 6-7, client uses code and its own creds to get a token and use it to hit the api's protected resource endpoint
