--- a/README.mdx
+++ b/README.mdx
@@ -340,5 +340,5 @@ fetchResource();
 6. POST server.token
 7. GET api.resource
 
-- in steps 1-5, client sends resource owner to server to authorize and get a token
+- in steps 1-5, client sends resource owner to server to authorize and get a code
 - in steps 6-7, client uses code and its own creds to get a token and use it to hit the api's protected resource endpoint
