getting routing down

--- a/custom/README.mdx
+++ b/custom/README.mdx
@@ -360,3 +360,5 @@ fetchResource();
   - server approve (create code)
   - client callback (exchange code for token)
   - server token (create token)
+
+npx create-react-router@latest manually-duplicate
